tests/spec/compile-fail/144_export_char_non_c.zn
// category: compile-fail
// profile: hosted
// panic.strategy: abort
// purpose: Char is not a C-compatible scalar; use an explicit integer width

module tests.fail.exportCharNonC;

@export("take_char", abi: C)
pub fn takeChar(ch: Char) -> I32 { // expected-error: Char is not C-compatible in an exported C ABI signature
    val ignored = ch;
    return 0;
}
